--- a/client/bin/main/ui/firstpage.fxml
+++ b/client/bin/main/ui/firstpage.fxml
@@ -2,30 +2,16 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-
-<StackPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.duke.ece651.mp.client.startGameButtonController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#onStartGameButton" prefHeight="453.0" prefWidth="694.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.duke.ece651.mp.client.startGameButtonController">
    <children>
-      <ImageView fitHeight="643.0" fitWidth="999.0" opacity="0.6" pickOnBounds="true">
-         <image>
-            <Image url="@start.jpg" />
-         </image>
-      </ImageView>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#onStartGameButton" prefHeight="640.0" prefWidth="800.0">
-         <children>
-            <Button fx:id="startGame" layoutX="315.0" layoutY="320.0" mnemonicParsing="false" onMouseClicked="#onStartGameButton" prefHeight="96.0" prefWidth="171.0" text="START GAME" textAlignment="JUSTIFY" textFill="#96a324" />
-            <Label alignment="CENTER" layoutX="276.0" layoutY="141.0" prefHeight="149.0" prefWidth="249.0" text="WELCOME" textAlignment="JUSTIFY" textFill="#2a18a1">
-               <font>
-                  <Font size="44.0" />
-               </font>
-            </Label>
-            <Label fx:id="connection_status" accessibleRole="TEXT_AREA" layoutX="229.0" layoutY="474.0" prefHeight="44.0" prefWidth="342.0" textFill="#d70a0a" wrapText="true" />
-         </children>
-      </AnchorPane>
+      <Button fx:id="startGame" layoutX="215.0" layoutY="160.0" mnemonicParsing="false" onMouseClicked="#onStartGameButton" prefHeight="96.0" prefWidth="171.0" text="START GAME" textAlignment="JUSTIFY" textFill="#96a324" />
+      <Label layoutX="233.0" layoutY="84.0" prefHeight="51.0" prefWidth="134.0" text="WELCOME" textAlignment="RIGHT" textFill="#2a18a1">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
    </children>
-</StackPane>
+</AnchorPane>
